--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,27 @@
   <script type="text/javascript" src="components/AngularJS-Toaster/toaster.min.js"></script>
   <!-- endbuild -->
   <!-- Custom Scripts -->
-  <script type="text/javascript" src="js/dashboard.min.js"></script>
+  <!-- <script type="text/javascript" src="js/dashboard.min.js"></script> -->
+  
+  <!-- Module & Routes -->
+  <script type="text/javascript" src="js/modules.js"></script>
+  <script type="text/javascript" src="js/routes.js"></script>
+  
+  <!-- Controllers -->
+  <script type="text/javascript" src="js/controllers/alert-ctrl.js"></script>
+  <script type="text/javascript" src="js/controllers/login-ctrl.js"></script>
+  <script type="text/javascript" src="js/controllers/master-ctrl.js"></script>
+  <script type="text/javascript" src="js/controllers/register-ctrl.js"></script>
+  
+  <!-- Directives -->
+  <script type="text/javascript" src="js/directives/loading.js"></script>
+  <script type="text/javascript" src="js/directives/widget.js"></script>
+  <script type="text/javascript" src="js/directives/widget-body.js"></script>
+  <script type="text/javascript" src="js/directives/widget-footer.js"></script>
+  <script type="text/javascript" src="js/directives/widget-header.js"></script>
+  
+  <!-- Services -->
+  <script type="text/javascript" src="js/services/auth-services.js"></script>
 </head>
 <body>
   <!-- Main Content -->
